<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>me.deadorfd</groupId>
  <artifactId>videos</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>videos</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
  </properties>
      <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
					<release>21</release>
					<source>21</source>
					<target>21</target>
					<fork>true</fork>
					<executable>C:\Program Files\Java\jdk-21.0.3\bin\javac</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.8</version>
			    <configuration>
					<jlinkImageName>video</jlinkImageName>
					<launcher>launcher</launcher>
			        <mainClass>video/me.deadorfd.videos.Video</mainClass>
			    </configuration>
			</plugin>
			<plugin>
		        <artifactId>maven-jar-plugin</artifactId>
		        <version>3.4.1</version>
		        <configuration>
		          <archive>
		            <manifest>
		              <mainClass>me.deadorfd.videos.Video</mainClass>
		            </manifest>
		          </archive>
		        </configuration>
	      	</plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
      </build>
	<dependencies>
	  	<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
		    <version>1.2.8</version>
		</dependency>
		<dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>3.44.0.0</version>
		</dependency>
		<dependency>
		    <groupId>org.bytedeco</groupId>
		    <artifactId>javacv-platform</artifactId>
		    <version>1.5.10</version>
		    <exclusions>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>flycapture-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>libdc1394-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>videoinput-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>telptonica-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>tesseract-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>librealsense-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>librealsense2-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>libfreenect-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>libfreenect2-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>openblas-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>opencv-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>leptonica-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>artoolkitplus-platform</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>javacpp-platform</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>me.deadorfd</groupId>
		    <artifactId>youtubedl</artifactId>
		    <version>1.1</version>
		</dependency>
		<dependency>
	        <groupId>de.jensd</groupId>
	        <artifactId>fontawesomefx-fontawesome</artifactId>
	        <version>4.7.0-9.1.2</version>
	    </dependency>
		<dependency>
		    <groupId>com.jfoenix</groupId>
		    <artifactId>jfoenix</artifactId>
		    <version>9.0.1</version>
		</dependency>
		<dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1</version>
		</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>21.0.3</version>
	  	</dependency>
	  	<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>21.0.3</version>
	  	</dependency>
	  	<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-base</artifactId>
		    <version>21.0.3</version>
	  	</dependency>
	  	<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-graphics</artifactId>
		    <version>21.0.3</version>
	  	</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-media</artifactId>
		    <version>21.0.3</version>
		</dependency>
	</dependencies>
</project>
